<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    android:orientation="vertical"
    tools:context=".ThemDSXeActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvthemdsxe"
        android:textColor="#000000"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="60dp">
            <EditText
                android:id="@+id/txtTenXe"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:hint="@string/txtten"
                android:gravity="center"
                android:background="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20dp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="60dp">
            <EditText
                android:id="@+id/txtQGia"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:hint="@string/txtqgia"
                android:gravity="center"
                android:background="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20dp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="60dp">
            <EditText
                android:id="@+id/txtSoCho"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:hint="@string/txtcho"
                android:gravity="center"
                android:background="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20dp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="60dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/spnhang"
                android:textStyle="bold"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_marginTop="7dp"/>
            <Spinner
                android:id="@+id/cbHang"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginLeft="120dp"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="60dp">

            <EditText
                android:id="@+id/txtMau"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:hint="@string/txtmau"
                android:textColorHint="#78909C"
                android:textSize="20dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:id="@+id/cvChonHinh"
            android:foreground="?attr/selectableItemBackground"
            android:layout_height="120dp"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="60dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/btnchonhinh"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgXe"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/picture"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/cvThemDSXe"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient">
                <TextView
                    android:id="@+id/tvThem"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:text="@string/btnthem"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/cvBack"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient">
                <TextView
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:text="@string/btnback"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>