<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_wave"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/TvDANHNHAP"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtTK"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:hint="@string/txttk"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:hint="@string/txtmk"
        android:inputType="textPassword" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/cvLogin"
            android:layout_width="300dp"
            android:clickable="true"
            android:layout_height="100dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/gradient"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/btndn"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </LinearLayout>
            <ImageView
                android:layout_width="48dp"
                android:layout_height="61dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/enter"
                android:layout_marginLeft="10dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/cvLogout"
            android:layout_width="300dp"
            android:clickable="true"
            android:layout_height="100dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/gradient"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/btnthoat"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </LinearLayout>
            <ImageView
                android:layout_width="48dp"
                android:layout_height="61dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/logout"
                android:layout_marginLeft="20dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>



</LinearLayout>