<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    android:orientation="vertical"
    tools:context=".ThemDSXeActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvthemhx"
        android:textColor="#000000"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/txtTenHangXe"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:hint="@string/txttenhang"
                android:gravity="center"
                android:background="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/cvThemDSHXe"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient">
                <TextView
                    android:id="@+id/txtThemHang"
                    android:layout_width="280dp"
                    android:layout_height="65dp"
                    android:text="@string/btnthemhang"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/cvBack"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:clickable="true"
            app:cardCornerRadius="20dp"
            android:elevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient">
                <TextView
                    android:layout_width="280dp"
                    android:layout_height="65dp"
                    android:text="@string/btnback"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>