<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_wave__1_"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvmenu"
        android:textColor="#000000"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="200dp">

        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/cvDSXe"
            android:layout_width="300dp"
            android:clickable="true"
            android:layout_height="100dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/gradient2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:textColor="#000000"
                    android:text="@string/btndsxe"
                    android:textAlignment="center"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </LinearLayout>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/sportcar"
                android:layout_marginLeft="5dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/cvHXe"
            android:layout_width="300dp"
            android:clickable="true"
            android:layout_height="100dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/gradient2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/btnhxe"
                    android:textColor="#000000"
                    android:textAlignment="center"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </LinearLayout>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/listcar"
                android:layout_marginLeft="10dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>